# DeviceBezels

./: .gitignore  README.md  pyproject.toml  requirements.txt
bezels/: catalog.json
devicebezels/: __init__.py  catalog.py
